Links update, remove search, box alignment fixed

--- a/components/base/custom.css
+++ b/components/base/custom.css
@@ -1,1 +1,9 @@
-#form
+#formAdd{
+    margin-bottom:40px
+}
+.input-group-prepend{
+    margin-left: -1px;
+}
+.address-billing .panel{
+    min-height: 190px;
+}
